@@ -1,5 +1,11 @@
 2004-05-08  Glynn Foster  <glynn.foster@sun.com>
 
+	* log_repaint.c, zoom.c: Patch from Harsh Jaitly  
+	for #127091 - log viewer detail view picks wrong 
+	entry
+
+2004-05-08  Glynn Foster  <glynn.foster@sun.com>
+
 	* logview.c: Patch from Samuel Stringham to parse
 	/etc/syslog.conf on first start up to see if it
 	can find some logs to open. Fixes #80865.
